# Machine-Learning-Web-Apps

./: README.md
Bible-Verse-Prediction-ML-App/: app.py
Build-n-Deploy-Flask-App-with-Waypoint/: Dockerfile  README.md  requirements.txt  waypoint.hcl
Deploying ML Flask App to GCP/: README.txt  app.yaml  main.py  requirements.txt
DisplaCify_App-Using-Displacy-in-Flask/: README.md  app.py
Embedding-Machine-Learning-Into-Express.js App/: FinalDataset.json  app.js  data.json  package.json
Gender-Classifier-ML-App-with-Flask + Bootstrap /: app.py
Iris-Species-Predictor-ML-Flask-App-With-Materialize.css/: app.py
Iris_EDA_Web_App/: README.md
NLP-Based Flask App with TextBlob(Main Points and Sentiment Analysis)/: app.py
NLPIffy_NLP_Based_SpaCy_Flask_App&_API/: app.py
Nationality_n_Gender Predictor_ML-WebApp/: README.md  app.py  refactored_app.py
Serving_ML_Models_as_API_with_FastAPI/: README.md  app.py
SpamDetector_ML_Package/: README.md  Spam Detection with ML.ipynb
SpamDetector_ML_Package/spamdetector/: pyproject.toml
SpamDetector_ML_Package/spamdetector/spamdetector/: __init__.py  spamdetector.py
SpamDetector_ML_Package/spamdetector/spamdetector/models/: spam_detector_nb_model.pkl  spam_vectorizer.pkl
SpamDetector_ML_Package/spamdetector/tests/: test_spamdetector.py
Summaryzer_Text_Summarization_App/: app.py  requirements.txt  spacy_summarization.py  spacy_summarizer.py
Youtube-Spam-Detector-ML-Flask-App/: YoutubeSpamMergedData.csv  app.py
gender_classifier_mlapp_with_streamlit/: README.md
(+59 files in other folders)
